--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -2,8 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% load static %} 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 
@@ -24,7 +29,7 @@
                     {% csrf_token %}
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Username" name="username" >
-                        <input type="password" class="form-control" placeholder="Password" name="psw" >
+                        <input type="password" class="form-control" placeholder="Username" name="psw" >
                         <button class="btn btn-primary" type="submit">Login</button>
                         <a class="btn btn-link" href="{% url 'onlinecourse:registration' %}">Sign Up</a>
                     </div>
@@ -35,27 +40,26 @@
     </div>
 </nav>
 
-<div class="container-fluid" style='padding: 20px;'>
+<div class="container-fluid">
     {% if grade > 80 %}
     <div class="alert alert-success">
        <!--HINT Display passed info -->
-        <p><b>Congratulations, {{user.first_name}}! </b>You have passed the exam and completed the course with score {{grade}} / 100</p>
+       <b>Congratulations, {{ user.username }}!</b>   You have passed the exam and compleeted thhe course with score <b>{{ grade }}/100</b></b>
     </div>
         {% else %}
         <div class="alert alert-danger">
             <!--HINT Display failed info -->
-            <p><b>Failed. </b>Sorry, {{user.first_name}}! You have failed the exam with score {{grade}} / 100</p>
+            <b>Failed.</b> Sorry, {{ user.username }}! You have failed exam with score <b>{{ grade }}/100</b></b>
         </div>
         <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
         {% endif %}
         <div class="card-columns-vertical mt-1">
         <h5 class="">Exam results</h5>
             <!--HINT Display exam results-->
-            <!--... for each question in the course ...-->
             {% for lesson in course.lesson_set.all %}
             {% for question in lesson.question_set.all %}
             <div class="card mt-1">
-                <div class="card-header"><h5 style="font-weight:bold">{{ question.question_text}}</h5></div>
+                <div class="card-header"><h5 style="font-weight:bold">{{ question.text}}</h5></div>
                 <div class="form-group">
                 <!--... for each choice in the question  choice_{{choice.id}}...-->
                     {% for choice in question.choice_set.all %}
@@ -74,7 +78,7 @@
                 </div>
             </div>
             {% endfor %}
-            {% endfor %}
+            {% endfor %}           
         </div>
     </div>
 </body>
